--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -27,6 +27,7 @@
 .stateText {
   font-family: sans-serif;
   fill: #fff;
+  font-size: xx-small;
   text-anchor: middle;
 }
 
@@ -68,3 +69,105 @@
     font-size: 13px;
   }
 }
+
+
+#scatter::before {
+  position: absolute;
+  top: 0px;
+  left: 105px;
+  z-index: -1;
+  display: block;
+  width: 1070px;
+  height: 440px;
+  content: " ";
+  background-image: url("../images/map17.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  opacity: 0.9;
+}
+/*
+////  from hairband
+*/
+
+.iframeContainer {
+  padding: 20px;
+  border: 1px solid #e3e3e3;
+}
+
+/* Sticky Footer rules (https://getbootstrap.com/examples/sticky-footer/) */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Padding bottom by footer height */
+  padding-bottom: 80px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%; /* Set the fixed height of the footer here */
+  height: 10px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+  background-color: #f5f5f5;
+}
+
+#footer p {
+  margin: 0;
+  font-size: 16px;
+}
+
+
+#hairmetal {
+  border-radius: 8px;
+}
+
+.tooltip {
+  position: absolute;
+  width: 135px;
+  height: 50px;
+  padding: 2px;
+  padding-top: 8px;
+  font: 10px sans-serif;
+  color: white;
+  text-align: center;
+  background: #551aaf;
+  border: 0;
+  border-radius: 10px;
+}
+
+.axis-text {
+  font-family: sans-serif;
+  font-weight: bold;
+  fill: #551aaf;
+  text-anchor: middle;
+}
+
+.active {
+  font-weight: bold;
+  fill: #000;
+  fill: #551aaf;
+  transition: fill 0.3s ease-out;
+  text-anchor: middle;
+}
+
+.inactive {
+  font-weight: lighter;
+  fill: #551aaf;
+  transition: fill 0.3s ease-out;
+  text-anchor: middle;
+}
+
+.inactive:hover {
+  fill: #e75480;
+  cursor: pointer;
+}
+
+/* h1 {
+  color: #e75480;
+} */
