--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -1,29 +1,22 @@
-.aText {
-  font-family: sans-serif;
-  font-size: 16px;
-  text-anchor: middle;
-}
-
+/* axis label selections display */
 .active {
   font-weight: bold;
-  fill: #000;
+  fill: rgb(14, 6, 128);
   transition: fill 0.3s ease-out;
   text-anchor: middle;
 }
-
 .inactive {
   font-weight: lighter;
-  fill: #c9c9c9;
+  fill: rgb(155, 158, 189);
   transition: fill 0.3s ease-out;
   text-anchor: middle;
 }
-
 .inactive:hover {
-  fill: #000;
+  fill: rgb(248, 14, 72);
   cursor: pointer;
 }
 
-/* font size dependent on radius, see app.js */
+/* state abbreviation in circle */
 .stateText {
   font-family: sans-serif;
   fill: #fff;
@@ -31,46 +24,12 @@
   text-anchor: middle;
 }
 
-.stateCircle {
-  fill: #89bdd3;
-  stroke: #e3e3e3;
+/* couldn't get border to appear, so changed color instead */
+circle:hover {
+  fill: red;
 }
 
-.chart {
-  display: block;
-  margin: 0;
-}
-
-.d3-tip {
-  padding: 6px;
-  font-size: 12px;
-  line-height: 1;
-  line-height: 1.5em;
-  color: #fff;
-  text-align: center;
-  text-transform: capitalize;
-  background: rgba(0, 0, 0, 0.8);
-  border-radius: 4px;
-}
-
-/* Mobile Rules */
-@media screen and (max-width: 530px) {
-  .stateText {
-    display: none;
-  }
-
-  .aText {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .aText {
-    font-size: 13px;
-  }
-}
-
-
+/* scatterplot background image */
 #scatter::before {
   position: absolute;
   top: 0px;
@@ -84,49 +43,10 @@
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
-  opacity: 0.9;
-}
-/*
-////  from hairband
-*/
-
-.iframeContainer {
-  padding: 20px;
-  border: 1px solid #e3e3e3;
+  opacity: 0.6;
 }
 
-/* Sticky Footer rules (https://getbootstrap.com/examples/sticky-footer/) */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Padding bottom by footer height */
-  padding-bottom: 80px;
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%; /* Set the fixed height of the footer here */
-  height: 10px;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  text-align: center;
-  background-color: #f5f5f5;
-}
-
-#footer p {
-  margin: 0;
-  font-size: 16px;
-}
-
-
-#hairmetal {
-  border-radius: 8px;
-}
-
+/* tooltip popup box */
 .tooltip {
   position: absolute;
   width: 135px;
@@ -140,34 +60,72 @@ body {
   border: 0;
   border-radius: 10px;
 }
+/* footer */
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%; /* Set the fixed height of the footer here */
+  height: 10px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+  background-color: #f5f5f5;
+}
+#footer p {
+  margin: 0;
+  font-size: 16px;
+}
 
-.axis-text {
+/* Sticky Footer rules (https://getbootstrap.com/examples/sticky-footer/) */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Padding bottom by footer height */
+  padding-bottom: 80px;
+}
+
+/* Mobile Rules */
+@media screen and (max-width: 530px) {
+  .stateText {
+    display: none;
+  }
+  .aText {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .aText {
+    font-size: 13px;
+  }
+}
+
+/* .axis-text {
   font-family: sans-serif;
   font-weight: bold;
   fill: #551aaf;
   text-anchor: middle;
-}
+} */
 
-.active {
-  font-weight: bold;
-  fill: #000;
-  fill: #551aaf;
-  transition: fill 0.3s ease-out;
+/* .aText {
+  font-family: sans-serif;
+  font-size: 16px;
   text-anchor: middle;
-}
+} */
 
-.inactive {
-  font-weight: lighter;
-  fill: #551aaf;
-  transition: fill 0.3s ease-out;
-  text-anchor: middle;
-}
+/* .iframeContainer {
+  padding: 20px;
+  border: 1px solid #e3e3e3;
+} */
 
-.inactive:hover {
-  fill: #e75480;
-  cursor: pointer;
-}
-
-/* h1 {
-  color: #e75480;
+/* .stateCircle {
+  fill: #89bdd3;
+  stroke: #e3e3e3;
+} */
+/* 
+.chart {
+  display: block;
+  margin: 0;
 } */
